Fixing Sonarqube recommendations